examples/test/testpolicy18855.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18855
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key32: value32
      key19: value4
      key40: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value45
      podSelector:
        matchLabels:
          key8: value36
          key16: value49
